# docbox-manager-desktop

./: README.md  cspell.json  index.html  package-lock.json  package.json  vite.config.ts
patches/: axios+1.12.2.patch
public/pdfjs/web/: viewer.mjs
src/: main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gateway.rs  lib.rs  logging.rs  main.rs
src-tauri/src/commands/: mod.rs  root.rs  server.rs  tenant.rs  utils.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/entity/: server.rs
src-tauri/src/database/migrations/: m202509221140_create_migrations_table.sql  m202509221140_create_servers_table.sql  mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/utils/: encryption.rs
src/api/: axios.ts  server.ts
src/api/docbox/: docbox.keys.ts  docbox.mutations.ts  docbox.mutators.ts  docbox.queries.ts  docbox.requests.ts  docbox.types.ts
src/api/root/: root.keys.ts  root.mutations.ts  root.queries.ts  root.requests.ts  root.types.ts
src/api/server/: server.keys.ts  server.mutations.ts  server.queries.ts  server.requests.ts  server.types.ts
src/api/tenant/: tenant.keys.ts  tenant.mutations.ts  tenant.queries.ts  tenant.requests.ts  tenant.types.ts
src/api/utils/: utils.requests.ts  utils.types.ts
src/components/: CreateDocumentBoxDialog.tsx  CreateFolderDialog.tsx  CreateLinkDialog.tsx  DeleteFileDialog.tsx  DocboxItemPinned.tsx  DocumentBoxesTable.tsx  EditFileDialog.tsx  EditFolderDialog.tsx  EditLinkDialog.tsx  ErrorPage.tsx  Header.tsx  InitializeGuard.tsx  InitializePage.tsx  LoadingPage.tsx  LoginPage.tsx  PendingMigrations.tsx  PendingMigrationsLoader.tsx  RouterLink.tsx  ServerSelectionProvider.tsx  TenantFileBrowser.tsx  TenantMigrateButton.tsx  TenantsMigrateButton.tsx  UploadFileDialog.tsx
src/components/browser/: DocboxItemsTable.tsx
src/components/docbox/: CreateDocumentBoxDialog.tsx  CreateFolderDialog.tsx  CreateLinkDialog.tsx  DeleteFolderDialog.tsx  DeleteLinkDialog.tsx  DocboxItemsTable.tsx  DocboxProvider.tsx  DocumentBoxesTable.tsx  EditFileDialog.tsx  EditFolderDialog.tsx  EditLinkDialog.tsx  FilePreviewDialog.tsx  FileTypeIcon.tsx  PdfFilePreviewDialog.tsx  UploadFileDialog.tsx
src/components/form/: FormAutocomplete.tsx  FormNumberField.tsx  FormSectionAccordion.tsx  FormTextField.tsx  FormUploadFile.tsx  FormValidIndicator.tsx  Switch.tsx  TextField.tsx  ToggleButtonGroup.tsx
src/components/server/: ConfirmDeleteServerItem.tsx  ServerItem.tsx  ServerSelectItem.tsx  ServerSelectionProvider.tsx
src/context/: server-context.ts
src/hooks/: use-app-form.ts
src/integrations/tanstack-query/: root-provider.tsx
src/routes/: __root.tsx  index.tsx  initialize.tsx  tenant.$env.$id.tsx  tenant.create.tsx
src/utils/: file-type.ts  format-number.ts
(+24 files in other folders)
