[package]
name = "docbox-manager-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "docbox_manager_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri and plugins
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Async runtime and helpers
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Tracing / logging
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Date time for time keeping and date storage
chrono = { version = "0.4", features = ["serde"] }

# UUIDv4 for unique IDs
uuid = { version = "1", features = ["v4"] }

# Environment variables
dotenvy = "=0.15.7"


# Core business logic
docbox-core = { version = "0.4.0" }
# Database access
docbox-database = { version = "0.4.0" }
# Search access
docbox-search = { version = "0.4.0" }
# Management access
docbox-management = { version = "0.2.0" }
# Secrets management
docbox-secrets = { version = "0.1.0" }
# Storage access
docbox-storage = { version = "0.1.0" }

# Caching
moka = { version = "=0.12.10", features = ["future"] }

# AWS configuration
aws-config = { version = "=1.8.2", features = ["behavior-version-latest"] }
eyre = "0.6.12"

reqwest = { version = "=0.12.22", features = ["json", "stream"] }
itertools = "0.14.0"
tauri-plugin-os = "2"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"


# Database dependencies
[dependencies.sqlx]
version = "=0.8.6"
default-features = false
features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json", "macros"]

[patch.crates-io]
docbox-core = { version = "0.4.0", path = "../../docbox/packages/docbox-core" }
docbox-database = { version = "0.4.0", path = "../../docbox/packages/docbox-database" }
docbox-search = { version = "0.4.0", path = "../../docbox/packages/docbox-search" }
docbox-management = { version = "0.2.0", path = "../../docbox/packages/docbox-management" }
docbox-secrets = { version = "0.1.0", path = "../../docbox/packages/docbox-secrets" }
docbox-storage = { version = "0.1.0", path = "../../docbox/packages/docbox-storage" }
